fix: meditation exit button on mobile

--- a/src/styles/main-menu-view.css
+++ b/src/styles/main-menu-view.css
@@ -54,6 +54,7 @@
 
 .main-menu.hidden {
     opacity: 0;
+    pointer-events: none;
 }
 
 .submenu.hidden {
